Validations added to Itemized Reconciliation

--- a/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.html
@@ -45,9 +45,7 @@
                                             <input [(ngModel)]="itemizedDto.date" required="required"
                                             class="form-control" name="date" bsDatepicker
                                             placeholder="Select Date" autocomplete="off" class="form-control" name="date"
-                                            bsDatepicker 
-                                           
-                                           >
+                                            bsDatepicker>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
