mangment  in charts of account , reconcilliation

--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -372,9 +372,9 @@
                                             <span class="">{{item.reconciliationType}}</span>
                                         </td>
 
-                                        <td  class="assignee-cell">
+                                        <td [ngClass]="{'disabled':!monthStatus}" class="assignee-cell">
                                             <div *ngIf="item.id != rowid" class="kt-user-card-v2"
-                                                (click)="openFieldUpdateAssignee(item.id)">
+                                                (click)="monthStatus &&  openFieldUpdateAssignee(item.id)">
                                                 <div class="kt-user-card-v2__pic">
                                                     <div *ngIf="item.profilePicture" class="kt-badge kt-badge--xl">
                                                         <img class="header-profile-picture m--img-rounded m--marginless m--img-centered"
@@ -399,11 +399,11 @@
                                         </td>
                                         <td class="action-cell">
                                             <div class="btn-group">
-                                                <a *ngIf="'Pages.Categories.Edit' | permission" class="btn"
+                                                <a [ngClass]="{'disabled':!monthStatus}" *ngIf="'Pages.Categories.Edit' | permission" class="btn"
                                                     href="javascript:;" data-toggle="tooltip" title="Edit"
                                                     (click)="editAccount(item.id)">
                                                     <img src="../../../../assets/img/edit.svg"></a>
-                                                <a *ngIf="'Pages.Categories.Delete' | permission" class="btn"
+                                                <a [ngClass]="{'disabled':!monthStatus}" *ngIf="'Pages.Categories.Delete' | permission" class="btn"
                                                 data-toggle="tooltip" title="Delete" href="javascript:;" (click)="deleteAccount(item.id)">
                                                     <img src="../../../../assets/img/del.svg"></a>
                                             </div>
@@ -430,10 +430,10 @@
                                                         <span class="">{{item.reconciliationType}}</span>
                                                     </div>
                                                 </li>
-                                                <li  class="assignee-cell collapsable-cell kt-user-card-v2">
+                                                <li [ngClass]="{'disabled':!monthStatus}" class="assignee-cell collapsable-cell kt-user-card-v2">
                                                     <div class="thead-box"><b>{{"Assignee" | localize}} : </b></div>
                                                     <div *ngIf="item.id != rowid"
-                                                        (click)="openFieldUpdateAssignee(item.id)" class="tdata-box">
+                                                        (click)="monthStatus &&  openFieldUpdateAssignee(item.id)" class="tdata-box">
                                                         <div class="kt-user-card-v2__pic">
                                                             <div *ngIf="item.profilePicture"
                                                                 class="kt-badge kt-badge--xl">
@@ -457,13 +457,13 @@
                                                     <div class="thead-box"><b>{{"Action" | localize}} : </b></div>
                                                     <div class="tdata-box">
                                                         <div class="btn-group">
-                                                            <a *ngIf="!item.isDeleted == true" class="btn"
+                                                            <a [ngClass]="{'disabled':!monthStatus}" *ngIf="!item.isDeleted == true" class="btn"
                                                                 href="javascript:;" (click)="editAccount(item.id)" data-toggle="tooltip" title="Edit">                                                           
                                                                 <img src="../../../../assets/img/edit.svg"></a>
-                                                            <a *ngIf="!item.isDeleted == true" class="btn" href="javascript:;"
+                                                             <a [ngClass]="{'disabled':!monthStatus}" *ngIf="!item.isDeleted == true" class="btn" href="javascript:;"
                                                                 (click)="deleteAccount(item.id)"data-toggle="tooltip" title="Delete">
                                                                 <img src="../../../../assets/img/del.svg"></a>
-                                                                <a *ngIf="item.isDeleted == true" class="btn" href="javascript:;"
+                                                                <a [ngClass]="{'disabled':!monthStatus}" *ngIf="item.isDeleted == true" class="btn" href="javascript:;"
                                                                 (click)="restoreAccount(item.id)">
                                                                 <i class="fas fa-trash-restore"></i></a>
                                                         </div>
