--- a/angular/src/account/login/login.component.html
+++ b/angular/src/account/login/login.component.html
@@ -60,7 +60,7 @@
                     <span class="kt-login__account-msg">
                         Don't have an account yet ?
                     </span>&nbsp;&nbsp;
-                    <a href="javascript:;" id="kt_login_signup"
+                    <a routerLink="/account/register" id="kt_login_signup"
                         class="kt-link kt-link--light kt-login__account-link">Request Access</a>
                 </div>
             </div>
