--- a/angular/src/account/register/register.component.html
+++ b/angular/src/account/register/register.component.html
@@ -193,41 +193,105 @@
                         <!--end: Form Wizard Step 2-->
 
                         <!--begin: Form Wizard Step 3-->
-                        <div class="kt-wizard-v1__content servicebody" data-ktwizard-type="step-content"data-ktwizard-state="" >
-                            <div class="kt-heading kt-heading--md">Select your Services</div>
-                            <div class="kt-form__section kt-form__section--first">
-                                <div class="kt-wizard-v1__form">
-                                    <div class="form-group">
-                                        <label>Delivery Type</label>
-                                        <select name="delivery" class="form-control">
-                                            <option value="">Select a Service Type Option</option>
-                                            <option value="overnight" selected>Overnight Delivery (within 48 hours)</option>
-                                            <option value="express">Express Delivery (within 5 working days)</option>
-                                            <option value="basic">Basic Delivery (within 5 - 10 working days)</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group">
-                                        <label>Packaging Type</label>
-                                        <select name="packaging" class="form-control">
-                                            <option value="">Select a Packaging Type Option</option>
-                                            <option value="regular" selected>Regular Packaging</option>
-                                            <option value="oversized">Oversized Packaging</option>
-                                            <option value="fragile">Fragile Packaging</option>
-                                            <option value="frozen">Frozen Packaging</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group">
-                                        <label>Preferred Delivery Window</label>
-                                        <select name="preferreddelivery" class="form-control">
-                                            <option value="">Select a Preferred Delivery Option</option>
-                                            <option value="morning" selected>Morning Delivery (8:00AM - 11:00AM)</option>
-                                            <option value="afternoon">Afternoon Delivery (11:00AM - 3:00PM)</option>
-                                            <option value="evening">Evening Delivery (3:00PM - 7:00PM)</option>
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                                            <div class="kt-pricing-1 kt-pricing-1--fixed">
+                                                <div class="kt-pricing-1__items row row-centered">
+                                                    <div class="kt-pricing-1__item col-lg-3 col-centered"
+                                                        *ngFor="let editionWithFeatures of editionsSelectOutput.editionsWithFeatures;  let i = index">
+                        
+                                                        <div class="kt-pricing-1__visual">
+                                                            <div class="kt-pricing-1__hexagon1"></div>
+                                                            <div class="kt-pricing-1__hexagon2"></div>
+                                                            <span class="kt-pricing-1__icon kt-font-brand">
+                                                                <i class="fa {{editionIcons[i]}}"></i>
+                                                            </span>
+                                                        </div>
+                        
+                                                        <span class="kt-pricing-1__price">
+                                                            {{editionWithFeatures.edition.displayName}}
+                                                        </span>
+                        
+                                                        <h2 class="kt-pricing-1__subtitle" *ngIf="isFree(editionWithFeatures.edition)">
+                                                            {{"Free" | localize}}
+                                                        </h2>
+                        
+                                                        <h2 class="kt-pricing-1__subtitle" *ngIf="!isFree(editionWithFeatures.edition)">
+                                                            <span *ngIf="editionWithFeatures.edition.dailyPrice > 0" class="kt-pricing-1__label">{{appSession.application.currencySign}} {{editionWithFeatures.edition.dailyPrice}}
+                                                            {{"PerDay" | localize}}<br /></span>
+                                                            <span *ngIf="editionWithFeatures.edition.weeklyPrice > 0" class="kt-pricing-1__label">{{appSession.application.currencySign}} {{editionWithFeatures.edition.weeklyPrice}}
+                                                            {{"PerWeek" | localize}}<br /></span>
+                                                            <span *ngIf="editionWithFeatures.edition.monthlyPrice > 0" class="kt-pricing-1__label">{{appSession.application.currencySign}} {{editionWithFeatures.edition.monthlyPrice}}
+                                                            {{"PerMonth" | localize}} <br /></span>
+                                                            <span *ngIf="editionWithFeatures.edition.annualPrice > 0" class="kt-pricing-1__label">{{appSession.application.currencySign}} {{editionWithFeatures.edition.annualPrice}}
+                                                            {{"PerYear" | localize}}</span>
+                                                        </h2>
+                        
+                                                        <span class="kt-pricing-1__description">
+                        
+                                                            <ng-container *ngFor="let feature of editionsSelectOutput.allFeatures">
+                                                                <!--Checbox Feature-->
+                                                                <ng-container *ngIf="isTrueFalseFeature(feature)">
+                                                                    <i class="la la-check kt-font-success"
+                                                                        *ngIf="featureEnabledForEdition(feature,editionWithFeatures)"></i>
+                                                                    <i class="la la-times kt-font-dark"
+                                                                        *ngIf="!featureEnabledForEdition(feature,editionWithFeatures)"></i>
+                                                                </ng-container>
+                                                                <ng-container *ngIf="isTrueFalseFeature(feature)">{{feature.displayName}}
+                                                                </ng-container>
+                                                                <!--Checbox Feature-->
+                                                                <!--Not Checbox Feature-->
+                                                                <ng-container *ngIf="!isTrueFalseFeature(feature)">
+                                                                    <i class="la la-check kt-font-success"></i>
+                                                                </ng-container>
+                                                                <ng-container *ngIf="!isTrueFalseFeature(feature)">
+                                                                    {{feature.displayName}}:{{getFeatureValueForEdition(feature,editionWithFeatures)}}
+                                                                </ng-container>
+                                                                <!--Not Checbox Feature-->
+                                                                <br />
+                                                            </ng-container>
+                        
+                                                        </span>
+                        
+                                                        <div class="kt-pricing-1__btn">
+                        
+                                                            <button
+                                                                class="btn btn-warning btn-pill  btn-brand btn-wide btn-uppercase btn-bolder btn-sm mx-2"
+                                                                (click)="upgrade(editionWithFeatures.edition, editionPaymentType.Upgrade)"
+                                                                *ngIf="isUserLoggedIn">
+                                                                {{"Upgrade" | localize}}
+                                                            </button>
+                        
+                                                            <button
+                                                                class="btn btn-success btn-pill  btn-brand btn-wide btn-uppercase btn-bolder btn-sm mx-2"
+                                                                [routerLink]="['/account/register-tenant']"
+                                                                [queryParams]="{editionId: editionWithFeatures.edition.id, subscriptionStartType: subscriptionStartType.Free}"
+                                                                href="#" *ngIf="!isUserLoggedIn && isFree(editionWithFeatures.edition)">
+                                                                {{"Start" | localize}}
+                                                            </button>
+                        
+                                                            <button
+                                                                class="btn btn-warning btn-pill  btn-brand btn-wide btn-uppercase btn-bolder btn-sm mx-2"
+                                                                [routerLink]="['/account/register-tenant']"
+                                                                [queryParams]="{editionId: editionWithFeatures.edition.id, subscriptionStartType: subscriptionStartType.Trial}"
+                                                                href="#"
+                                                                *ngIf="!isUserLoggedIn && !isFree(editionWithFeatures.edition) && editionWithFeatures.edition.trialDayCount">
+                                                                {{"FreeTrial" | localize}}
+                                                            </button>
+                        
+                                                            <button
+                                                                class="btn btn-primary btn-pill  btn-brand btn-wide btn-uppercase btn-bolder btn-sm mx-2"
+                                                                [routerLink]="['/account/register-tenant']"
+                                                                [queryParams]="{editionId: editionWithFeatures.edition.id, subscriptionStartType: subscriptionStartType.Paid, editionPaymentType: editionPaymentType.NewRegistration}"
+                                                                href="#" *ngIf="!isUserLoggedIn && !isFree(editionWithFeatures.edition)">
+                                                                {{"BuyNow" | localize}}
+                                                            </button>
+                        
+                                                        </div>
+                        
+                                                    </div>
+                        
+                                                </div>
+                                            </div>
+                                
                         <!--end: Form Wizard Step 3-->
 
                         <!--begin: Form Wizard Step 4-->
