Added SignUp Model

--- a/angular/src/account/register/register.component.html
+++ b/angular/src/account/register/register.component.html
@@ -193,7 +193,8 @@
                         <!--end: Form Wizard Step 2-->
 
                         <!--begin: Form Wizard Step 3-->
-                                            <div class="kt-pricing-1 kt-pricing-1--fixed">
+                        <div class="kt-wizard-v1__content servicebody" data-ktwizard-type="step-content" data-ktwizard-state="">
+                            <div class="kt-pricing-1 kt-pricing-1--fixed">
                                                 <div class="kt-pricing-1__items row row-centered">
                                                     <div class="kt-pricing-1__item col-lg-3 col-centered"
                                                         *ngFor="let editionWithFeatures of editionsSelectOutput.editionsWithFeatures;  let i = index">
@@ -290,7 +291,8 @@
                                                     </div>
                         
                                                 </div>
-                                            </div>
+                            </div>
+                        </div>
                                 
                         <!--end: Form Wizard Step 3-->
 
