UI fixes in forget Password

--- a/angular/src/account/login/login.component.html
+++ b/angular/src/account/login/login.component.html
@@ -11,7 +11,7 @@
                 </div>
                 <div class="kt-login__signin">
                     <div class="kt-login__head">
-                        <h3 class="kt-login__title">Sign In To your account</h3>
+                        <h3 class="kt-login__title text-white">Sign In To your account</h3>
                     </div>
 
                     <form #loginForm="ngForm" class="kt-form" method="post" novalidate (ngSubmit)="login()">
