--- a/angular/src/account/password/forgot-password.component.html
+++ b/angular/src/account/password/forgot-password.component.html
@@ -11,7 +11,7 @@
                     </div>
                     <div class="kt-login__signin">
                         <div class="kt-login__head">
-                            <h3 class="kt-login__title">Recover Password</h3>
+                            <h3 class="kt-login__title text-white">Recover Password</h3>
                         </div>
     
                         <form #forgotPassForm="ngForm" class="kt-form" method="post" novalidate (ngSubmit)="save()">
