--- a/angular/src/account/register/register.component.html
+++ b/angular/src/account/register/register.component.html
@@ -635,22 +635,22 @@
                                         </div>
                                         <div class="form-group">
                                             <label>Card Number</label>
-                                            <input type="text" #cardNumberOfUser="ngModel" [(ngModel)]="paymentDetailsDto.cardNumber" class="form-control" name="cardNumberOfUser" placeholder="xxxx-xxxx-xxxxxx" value="" autocomplete="off" required required maxlength="64">
+                                            <input type="text" #cardNumberOfUser="ngModel" [(ngModel)]="paymentDetailsDto.cardNumber" class="form-control" name="cardNumberOfUser" placeholder="xxxx-xxxx-xxxxxx" value="" autocomplete="off" required maxlength="64">
                                             <validation-messages [formCtrl]="cardNumberOfUser"></validation-messages>
                                         </div>
                                         <div class="row">
                                             <div class="col-xl-6">
                                                 <div class="form-group">
                                                     <label>CVV Code</label>
-                                                    <input type="text" #CVVCodeOfUser="ngModel" [(ngModel)]="paymentDetailsDto.CVVCode"  class="form-control" name="CVVCodeOfUser" placeholder="Enter CVV Code" value="" autocomplete="off" required required maxlength="64">
+                                                    <input type="text" #CVVCodeOfUser="ngModel" [(ngModel)]="paymentDetailsDto.CVVCode"  class="form-control" name="CVVCodeOfUser" placeholder="Enter CVV Code" value="" autocomplete="off" required maxlength="64">
                                                     <validation-messages [formCtrl]="CVVCodeOfUser"></validation-messages>
                                                 </div>
                                             </div>
                                             <div class="col-xl-6">
                                                 <div class="form-group">
                                                     <label>Expiry Date</label>
-                                                    <input type="text" #expiryDateOfUser="ngModel" [(ngModel)]="paymentDetailsDto.expiryDate" class="form-control" name="expiryDateOfUser" placeholder="Enter Date" value="" autocomplete="off" required required maxlength="64">
-                                                    <validation-messages [formCtrl]="expiryDateOfUser"></validation-messages>
+                                                    <input  bsDatepicker #expiryDateOfUser="ngModel" [(ngModel)]="paymentDetailsDto.expiryDate" class="form-control" name="expiryDateOfUser" placeholder="Select Date" bsDatepicker autocomplete="off" required>
+                                                    
                                                 </div>
                                             </div>
                                         </div>
@@ -658,7 +658,7 @@
                                             <div class="col-xl-6">
                                                 <div class="form-group">
                                                     <label>Email</label>
-                                                    <input type="email" #emailOfUser="ngModel" [(ngModel)]="paymentDetailsDto.email" class="form-control" name="emailOfUser" placeholder="Enter Email" value="" autocomplete="off" required required maxlength="64">
+                                                    <input type="email" #emailOfUser="ngModel" [(ngModel)]="paymentDetailsDto.email" class="form-control" name="emailOfUser" placeholder="Enter Email" value="" autocomplete="off" required maxlength="64">
                                                     <validation-messages [formCtrl]="emailOfUser"></validation-messages>
                                                 </div>
                                             </div>
@@ -666,8 +666,8 @@
                                                 <div class="form-group">
                                                     <label>Commitment</label>
                                                     <select name="Commitment" #commitmentOfUser="ngModel" [(ngModel)]="paymentDetailsDto.commitment"class="form-control bg-white border">
-                                                        <option value="">Monthly Plan</option>
-                                                        <option value="AF">Afghanistan</option>
+                                                        <option value="0">Monthly Plan</option>
+                                                        <option value="1">Annullly Plan</option>
                                                     </select>
                                                 </div>
                                             </div>
