fixes and delete all ui.

--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -337,6 +337,9 @@
                                     [resizableColumns]="primengTableHelper.resizableColumns">
                                     <ng-template pTemplate="header">
                                         <tr class="task-table-inner">
+                                            <th class="cell-none">
+                                                
+                                            </th>
                                             <th class="accountNo-cell" scope="col" pSortableColumn="AccountNumber">
                                                 {{"Account No" |localize}}
                                                 <p-sortIcon field="AccountNumber"></p-sortIcon>
@@ -361,7 +364,6 @@
                                             <th class="action-cell" scope="col">
                                                 {{"Action" | localize}}
                                             </th>
-
                                             <th class="cell-none">
                                                 <!-- <div (click)="collapsibleRowClick(j.id)" class="taggle-btn"></div> -->
                                             </th>
@@ -375,6 +377,12 @@
                                 <tbody *ngFor="let item of chartsOfAccountList">
                                     <tr class="task-table-inner table-repeater" class="{{item.isDeleted == true ? 'warnning' : '' }}">
 
+                                        <td class="toggle-btn-cell" >                            
+                                            <label class="kt-checkbox kt-checkbox--bold kt-checkbox--brand">
+                                                <input (change)="checkValue(item.id)" type="checkbox">
+                                                <span></span>
+                                            </label>
+                                        </td>
                                         <td class="accountNo-cell">
                                             <span class="">{{item.accountNumber}}</span>
 
