--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.html
@@ -285,7 +285,7 @@
 
                             <div class="form-group " *ngIf="!commantBox">
                                 <label>{{"Comments" | localize}}</label>
-                                <p-editor [(ngModel)]="comment" (keydown.space)="$event.preventDefault();" required name="HtmlEditorInput"
+                                <p-editor [(ngModel)]="comment" name="HtmlEditorInput"
                                     [style]="{'height':'150px'}">
                                 </p-editor>
                                 <button class="btn btn-brand" (click)="onComment()">{{"Comment" | localize}}</button>
