--- a/angular/src/app/main/reconcilliation/itemized/itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized.component.html
@@ -265,15 +265,15 @@
                                     <thead>
                                         <tr>
                                             <th></th>
-                                            <th class="text-navyblue"> </th>
-                                            <th class="text-navyblue"> </th>
-                                            <th class="text-navyblue"> </th>
+                                            <th class="text-navyblue">{{"Beginning Amount" | localize}}</th>
+                                            <th class="text-navyblue">{{"Accrued Amortization" | localize}}</th>
+                                            <th class="text-navyblue">{{"Net Amount" | localize}}</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
                                             <td class="text-navyblue">{{"Total" | localize}}:</td>
-                                            <td class="text-blue"> {{TotalAmount| formater }}</td>
+                                            <td class="text-blue"> {{TotalAmount | formater }}</td>
                                         </tr>
                                         <tr>
                                             <td class="text-navyblue">{{"Trial Balance" | localize}}:</td>
