--- a/angular/src/app/main/reconcilliation/reconcilliation.component.html
+++ b/angular/src/app/main/reconcilliation/reconcilliation.component.html
@@ -78,7 +78,7 @@
                                         </div>
                                     </form>
                                     <div class="dropdown-btn-box">
-                                        <button (click)="openFilterClick()" class="btn btn-square"><img
+                                        <button (click)="openFilterClick()" data-toggle="tooltip" title="More Filters" class="btn btn-square"><img
                                                 src="./assets/media/ClosingCheckList/filter.png" alt="filter"></button>
                                     </div>
                                 </div>
@@ -95,7 +95,7 @@
                                             </select>
                                         </div>
                                         <div class="block-btn">
-                                            <button class="btn btn-square bg-lightgrey" (click)="ResetGrid()">
+                                            <button class="btn btn-square bg-lightgrey" data-toggle="tooltip" title="Reset Filters" (click)="ResetGrid()">
                                                 <img src="./assets/media/ClosingCheckList/block.png" alt="block-btn">
                                             </button>
                                         </div>
