--- a/angular/src/app/main/categories/create-or-edit-category/create-or-edit-category.component.html
+++ b/angular/src/app/main/categories/create-or-edit-category/create-or-edit-category.component.html
@@ -22,7 +22,7 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="title">{{"Title" | localize}}</label>
-                                    <input autofocus type="text" class="form-control" id="title"  required (focusout)="CheckCategory()" name="title"
+                                    <input autofocus type="text" class="form-control" id="title" autocomplete="off" required (focusout)="CheckCategory()" name="title"
                                         [(ngModel)]="categoryobj.title">
                                         <span style="color:red" *ngIf="isCategoryExist">{{"CategorywithsameNamealreadyexist" | localize}}</span>
                                 </div>
@@ -32,7 +32,7 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="description">{{"Description" | localize}}</label>
-                                    <textarea class="form-control" [(ngModel)]="categoryobj.description"
+                                    <textarea class="form-control" [(ngModel)]="categoryobj.description" autocomplete="off"
                                         id="description" name="description" (keydown.enter)="save($event)"
                                          ></textarea>
                                 </div>
