--- a/angular/src/account/register/register.component.html
+++ b/angular/src/account/register/register.component.html
@@ -101,7 +101,7 @@
                                         <div class="col-xl-6">
                                             <div class="form-group">
                                                 <label>Confirm Password</label>
-                                                <input #repeatPasswordOfUser="ngModel" [(ngModel)]="personalInfoDto.repeatPassword"type="password" class="form-control" name="passwordOfUser" placeholder="Enter Confirm Password" value="">
+                                                <input #repeatPasswordOfUser="ngModel" type="password" class="form-control" name="passwordOfUser" placeholder="Enter Confirm Password" value="">
                                                 <validation-messages [formCtrl]="repeatPasswordOfUser"></validation-messages>
                                             </div>
                                         </div>
@@ -604,9 +604,9 @@
                                             Personal Information
                                         </div>
                                         <div class="kt-wizard-v1__review-content">
-                                            {{personalInfoDto.firstName}} {{personalInfoDto.larstName}}<br/>
+                                            {{personalInfoDto.firstName}} {{personalInfoDto.lastName}}<br/>
                                             Title: {{personalInfoDto.title}}<br/>
-                                            Email: {{personalInfoDto.email}}
+                                            Email: {{personalInfoDto.emailAddress}}
                                         </div>
                                         <div class="kt-heading kt-wizard-v1__review-title">
                                             Business Information
