Update in previous commit

--- a/angular/src/account/register/register.component.html
+++ b/angular/src/account/register/register.component.html
@@ -101,8 +101,8 @@
                                         <div class="col-xl-6">
                                             <div class="form-group">
                                                 <label>Confirm Password</label>
-                                                <input #repeatPasswordOfUser="ngModel" type="password" class="form-control" name="passwordOfUser" placeholder="Enter Confirm Password" value="">
-                                                <validation-messages [formCtrl]="repeatPasswordOfUser"></validation-messages>
+                                                <input  type="password" class="form-control" name="passwordOfUser" placeholder="Enter Confirm Password" value="">
+                                                
                                             </div>
                                         </div>
                                     </div>
